# SafetyCriticalOpenGL2

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  get_dependencies.sh  make_vs_dev_env.sh  run_clang_tidy.bat  run_clang_tidy.sh  setup-workspace.sh  vcpkg.json  vcpkg_get_dependencies.sh
.github/workflows/: run_clang_tidy.yml  test_build.yml
assets/: asset_origins.txt  assets_list.json  noto_sans_sc_font.json  plain_white_quad_font.json  window_settings.json
assets/models/: grass_cube.mtl
assets/terrain/: isle_of_man.terrain  isle_of_man.tif  st_helena.terrain  st_helena_color_relief.tif  st_helena_hillshade.tif  umbra_mount_yasur.terrain
make_dev_env_scripts/: make_dev_env_default_generator.bat  make_windows_dev_env.bat
source/: CMakeLists.txt  main.cpp
source/executable/: CMakeLists.txt  main.cpp
submodules/: CMakeLists.txt
third_party_code/: CMakeLists.txt
third_party_code/egl_v1_5/: CMakeLists.txt
